add test files.

--- a/sass-course-1/intro.html
+++ b/sass-course-1/intro.html
@@ -31,7 +31,8 @@
   <ul>
     <li>Atom - https://atom.io/</li>
     <li>Browser-Plus - https://atom.io/packages/browser-plus</li>
-    <li>(Windows) Ruby Installer - https://rubyinstaller.org/</li>
+    <li>Atom-Sass - https://atom.io/packages/atom-sass</li>
+    <li>(Windows) Ruby Installer v2.4 - https://rubyinstaller.org/</li>
     <li>(Mac) Ruby - sudo gem install sass, sass -v</li>
   </ul>
 </body>
