--- a/sass-course-1/intro.html
+++ b/sass-course-1/intro.html
@@ -13,14 +13,14 @@
   <ol>
     <li>Intro to SASS</li>
     <li>Install SASS</li>
-    <li class="active">Setup Dev Environment</li>
+    <li>Setup Dev Environment</li>
     <li>Variables</li>
     <li>Nesting</li>
     <li>Partials</li>
     <li>Import</li>
     <li>Mixins</li>
     <li>Extend/Iheritance</li>
-    <li>Operators</li>
+    <li class="active">Operators</li>
   </ol>
   <h3>Prerequisites</h3>
   <ul>
