--- a/sass-course-1/test.html
+++ b/sass-course-1/test.html
@@ -8,6 +8,28 @@
   <link rel="stylesheet" href="test.css">
 </head>
 <body>
+  <header>
+    <h1>Header<h1>
+    <h2>Sub-header</h2>
+  </header>
+  <nav>
+    <ul>
+      <li><a href="">home</a></li>
+      <li><a href="">about</a></li>
+      <li><a href="">contact</a></li>
+    </ul>
+  </nav>
+  <div>
+    <div class="card">
+      <h3>Card One</h3>
+      <p>Hello I am a card</p>
+    </div>
 
+    <div class="box">
+      <h3>Box One</h3>
+      <p>Hi i am a box</p>
+    </div>
+  </div>
+  <footer>Footer</footer>
 </body>
 </html>
